2003-10-17  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* doc/descriptions/unsupported.desc: Added Reflecta iScan
	  1800. Updated information for Epson Perfection 1670.
	* README.linux: Added information about compilation problems when
	  Linux 2.6 is installed.
	* tools/sane-desc.c: In error and warning messages print the name
	  of the description file. Print warning if the status is not set
	  for a device.
	* backend/test.c: Reindented.
	* AUTHORS: Nathan Ruthman has CVS access now.

2003-10-17  Karl Heinz Kremer <khk@khk.net>

	* doc/descriptions/epson.desc: Fixed bug #30149 (added :status information for all scanners)

2003-10-17  Gerhard Jaeger <gerhard@gjaeger.de>

	* acinclude.m4 aclocal.m4 configure: Added -D_REENTRANT to compiler
	  flags, when using pthread support.
	* sanei/sanei_thread.c: Added SIGPIPE handling,
	  when compiled for pthread support.
	* backend/test.c: Removed blocking SIGPIPE, as this is now handled
	  in sanei_thread library.
	* backend/plustek.h backend/plustek.c backend/plustek-usbhw.c:
	  Added checks for intervaltimer, to make it compile on OS/2.

2003-10-16  m. allan noah <anoah at pfeiffer dot edu>

	* backend/fujitsu.c: memset the device struct and the scsi buff
	  when a new device is attached. Submitted by 
	  Chris Chesney <cchesney at go-integral dot com>.
          Initialized a couple vars in the 3091 init routines.

2003-10-15  Henning Meier-Geinitz <henning@meier-geinitz.de>

	* AUTHORS: Marked maintainers that have CVS access with a
	  (*). Added m. allan noah to fujitsu backend. Added Julien Blache
	  and Petter Reinholdtsen to "Miscellaneous coding". Removed
	  Petter Reinholdtsen from "CVS repository maintainer".
	* doc/sane-usb.man: sane-find-scanner is in section 1, not 5.

2003-10-15  Gerhard Jaeger <gerhard@gjaeger.de>

	* include/sanei/config.h.in configure.in configure:
	  Added test for setitimer.

2003-10-14  Henning Meier-Geinitz <henning@meier-geinitz.de>
