@@ -1,13 +1,18 @@
 #
 # saned.conf
 #
-# The contents of the saned.conf file is a list of host
-# names or IP addresses that are permitted by saned to
-# use local SANE devices in a networked configuration.
+# The contents of the saned.conf  file  is  a  list  of  host  names,  IP
+# addresses or IP subnets (CIDR notation) that are permitted to use local
+# SANE devices. IPv6 addresses must be enclosed in brackets,  and  should
+# always  be specified in their compressed form.
+#
 # The hostname matching is not case-sensitive.
 #
 #scan-client.somedomain.firm
 #192.168.0.1
+#192.168.0.1/29
+#[2001:7a8:185e::42:12]
+#[2001:7a8:185e::42:12]/64
 #
 # NOTE: /etc/inetd.conf (or /etc/xinetd.conf) and
 # /etc/services must also be properly configured to start
